--- a/PerthCodeDojo/package.json
+++ b/PerthCodeDojo/package.json
@@ -10,6 +10,6 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
-    "morgan": "~1.5.1",
+    "morgan": "~1.5.1"
   }
 }
